--- a/_posts/2024-08-26-book2_chapter06.markdown
+++ b/_posts/2024-08-26-book2_chapter06.markdown
@@ -92,3 +92,34 @@ draw_fruits(km.cluster_centers_.reshape(-1, 100, 100), ratio=3)
 * 엘보우 방법은 클러스터 개수를 늘려가면서 이너셔의 변화를 관찰하여 최적의 클러스터 개수를 찾는 방법입니다.
 
 ![엘보우 방법](/assets/img/sample/29.png)
+
+# 주성분 분석
+
+## 차원과 차원 축소
+* 과일 사진의 경우 10000개의 픽셀이 있기 때문에 10000개의 특성이 있는 셈이고, 이런 특성을 **차원**이라고도 부릅니다.
+* 결국 이 차원을 줄일 수 있다면 저장 공간을 크게 절약할 수 있을 것입니다.
+* 비지도 학습의 차원 축소 알고리즘 중 하나로 **주성분 분석(PCA)**가 있습니다.
+
+## PCA 클래스 
+```python
+import numpy as np
+fruits = np.load('fruits_300.npy')
+fruits_2d = fruits.reshape(-1, 100*100)
+
+from sklearn.decomposition import PCA
+pca = PCA(n_components=50)
+pca.fit(fruits_2d)
+
+draw_fruits(pca.components_.reshape(-1, 100, 100))
+```
+
+![PCA](/assets/img/sample/30.png)
+
+## 설명된 분산
+* 주성분이 원본 데이터의 분산을 얼마나 잘 나타내는지 기록한 값을 의미합니다.
+
+```python
+plt.plot(pca.explained_variance_ratio_)
+```
+
+![설명된 분산](/assets/img/sample/31.png)
