--- a/_posts/2024-09-18-book4_chapter01-03.markdown
+++ b/_posts/2024-09-18-book4_chapter01-03.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "9.18 Chapter 01"
 date:   2024-09-18 19:02:31 +0900
-categories: ML Advanced Session
+categories: ML Advanced_Session
 ---
 
 # 통계학이란?
