--- a/_posts/2024-09-22-book4_chapter04.markdown
+++ b/_posts/2024-09-22-book4_chapter04.markdown
@@ -6,3 +6,16 @@ categories: ML Advanced_Session
 ---
 
 # 추론통계 ~ 신뢰구간
+
+## 추론통계를 배우기 전에
+
+### 전수조사와 표본조사
+* 알고자 하는 대상인 모집단을 알아보고자 사용했던 2가지 방법
+    1. 전수조사: 기술통계 방법을 사용
+    2. 표본조사: 추론통계 방법을 사용
+
+### 데이터를 얻는다는 것
+* `데이터(표본)을 얻는다는 것은 무엇인가?`
+* 모집단에 포함된 전체 값으로 구성된 분포에서 일부를 추출하는 것
+* 모집단을 나타내는 분포: **모집단 분포**
+* 모집단 분포를 특징 짓는 양을 **모수 또는 파라미터**라 부릅니다.
