부교재 chap04 진행중

--- a/_posts/2024-09-22-book4_chapter04.markdown
+++ b/_posts/2024-09-22-book4_chapter04.markdown
@@ -19,3 +19,35 @@ categories: ML Advanced_Session
 * 모집단에 포함된 전체 값으로 구성된 분포에서 일부를 추출하는 것
 * 모집단을 나타내는 분포: **모집단 분포**
 * 모집단 분포를 특징 짓는 양을 **모수 또는 파라미터**라 부릅니다.
+
+* 확률 분포와 실현값의 관계는 모집단과 표본의 관계와 매우 비슷하다.
+* 지금부터는 `모집단=확률분포`, `표본=확률분포를 따르는 실현값`이라 생각합시다.
+* 즉, `얻은 표본으로 모집단을 추정한다.`라는 원래 목표를 `얻은 실현값으로 이 값을 발생시킨 확률분포를 추정한다.`라는 목표로 바꾸어 말할 수 있습니다.
+* 수학적인 확률분포로 모집단 분포를 근사하는 것을, 여기서는 **모형화(modeling)**라 부르도록 합시다.
+
+---
+
+* 모집단에서 표본을 얻을 때 중요한 것이 **무작위 추출(random sampling)**입니다.
+* 이는 데이터를 얻을 때 모집단에 포함된 요소를 하나씩 무작위로 선택하여 추출하는 방식입니다.
+1. 단순무작위추출법
+* 가장 이상적인 무작위추출 방법으로 표본에 있을 수 있는 모든 요소를 목록으로 만들고, 난수를 이용하여 표본을 정하는 것입니다.
+2. 층화추출법
+* 모집단을 몇 개의 층(집단)으로 미리 나눈 뒤, 각 층에서 필요한 수의 조사대상을 무작위로 추출하는 방법입니다.
+* 이 외에도 계통추출법, 군집추출법 등 다양한 방법이 존재합니다.
+* 모집단에 대해 추정한 결과를 어느 정도 일반화할 수 있는가는, **각 분야 고유의 지식(도메인 지식)에 따라 달라집니다.**
+
+### 추론통계를 직감적으로 이해하기
+* `시사점 1`: 정말로 알고자 하는 것은 표본 데이터가 아니라 모집단이다.
+* `시사점 2`: 모집단의 모든 요소를 다 조사하는 전수조사는 어렵다.
+* `시사점 3`: 작은 크기의 표본으로도 모집단을 추론할 수 있다.
+* `시사점 4`: 표본을 추출할 때는 무작위로 추출해야 한다.
+
+## 표본오차와 신뢰구간
+
+### 모집단과 데이터 사이의 오차 고려하기
+* 정말로 알고 싶은 것 = 모집단평균 *μ*
+* 모집단을 직접 알 수는 없으므로 **모집단의 일부인 크기 n인 표본을 모집단에서 무작위로 추출하여, 이 표본에서 모집단평균 *μ*를 추정하는 것으로 생각해 가겠습니다.**
+
+### 표본오차
+* `정말로 알고 싶은 것`과 `실제로 손 안에 있는 데이터`에는 어긋남(오차)이 생기는 것입니다.
+* 이런 어긋남을 **표본오차(표집오차, sampling error)**라 합니다.
