chap04 부교재 진행중

--- a/_posts/2024-09-22-book4_chapter04.markdown
+++ b/_posts/2024-09-22-book4_chapter04.markdown
@@ -49,5 +49,18 @@ categories: ML Advanced_Session
 * 모집단을 직접 알 수는 없으므로 **모집단의 일부인 크기 n인 표본을 모집단에서 무작위로 추출하여, 이 표본에서 모집단평균 *μ*를 추정하는 것으로 생각해 가겠습니다.**
 
 ### 표본오차
-* `정말로 알고 싶은 것`과 `실제로 손 안에 있는 데이터`에는 어긋남(오차)이 생기는 것입니다.
+* `정말로 알고 싶은 것(모집단 평균)`과 `실제로 손 안에 있는 데이터(표본 평균)`에는 어긋남(오차)이 생기는 것입니다.
 * 이런 어긋남을 **표본오차(표집오차, sampling error)**라 합니다.
+
+* 표본오차는 확률적으로 바뀐다.
+
+---
+
+* 큰 수의 법칙
+* 표본 평균과 모집단 평균의 관계에는 **큰 수의 법칙**이 성립합니다.
+* 이는 **표본크기 *n*이 커질 수록 표본 평균이 모집단 평균에 한없이 가까워진다는 법칙입니다.**
+* 다른 말로 하면, 표본 오차가 0에 한없이 가까워진다는 뜻이기도 합니다.
+
+![큰수의법칙](/assets/img/sample/32.png)
+
+### 표본오차의 확률분포
