--- a/_posts/2024-09-22-book4_chapter04.markdown
+++ b/_posts/2024-09-22-book4_chapter04.markdown
@@ -64,3 +64,16 @@ categories: ML Advanced_Session
 ![큰수의법칙](/assets/img/sample/32.png)
 
 ### 표본오차의 확률분포
+* 표본오차의 확률분포를 알면 어느 정도 크기의 오차가, 어느 정도의 확률로 나타나는지를 알 수 있게 됩니다.
+
+* 표본오차의 분포에 관해 중요한 정보를 제공하는 것이 **중심극한정리**입니다.
+* 이는 모집단이 어떤 분포이든 간에, **표본 크기 *n*이 커질수록 표본평균의 분포는 정규분포로 근사할 수 있다는 것을 의미합니다.**
+* 표본 평균의 분포에 대해서, 평균은 모집단 평균 `μ`, 표준편차는 모집단의 표준편차 σ와 표본 크기 *n*을 이용하여 `σ/√n` 로 나타냅니다.
+
+![큰수의법칙](/assets/img/sample/33.png)
+
+---
+
+* 모집단의 성질을 추정하는 데 사용하는 통계량을 **추정량**이라 합니다.
+* 표본크기 *n*을 무한대로 했을 때, 모집단의 성질과 일치하는 추정량을 **일치추정량**이라 하고, 추정량의 평균값(기댓값)이 모집단의 성질과 일치할 때의 추정량은 **비편향추정량**이라 합니다.
+* 표본표준편차를 계산 시, 올바르게는 *n-1*로 나눈 다음 식이 모집단 표준편차 σ의 비편향추정량이 됩니다.
