부교재 chap04 진행중

--- a/_posts/2024-09-22-book4_chapter04.markdown
+++ b/_posts/2024-09-22-book4_chapter04.markdown
@@ -77,3 +77,19 @@ categories: ML Advanced_Session
 * 모집단의 성질을 추정하는 데 사용하는 통계량을 **추정량**이라 합니다.
 * 표본크기 *n*을 무한대로 했을 때, 모집단의 성질과 일치하는 추정량을 **일치추정량**이라 하고, 추정량의 평균값(기댓값)이 모집단의 성질과 일치할 때의 추정량은 **비편향추정량**이라 합니다.
 * 표본표준편차를 계산 시, 올바르게는 *n-1*로 나눈 다음 식이 모집단 표준편차 σ의 비편향추정량이 됩니다.
+* 이는 표본변수, 표본평균, 모평균의 위치관계를 바탕으로 표본평균을 기반으로 표준편차를 계산했을 때의 작은 값이 되는 것(과소평가)을 보정하고자 함입니다.
+
+* `σ/√n`을 **표준오차(standard error)**라고 합니다.
+
+### 신뢰구간이란?
+
+![신뢰구간](/assets/img/sample/46.png)
+
+* ~% 신뢰구간을 해석하면 `"~%의 확률로 이 구간에 모집단평균 μ가 있다."`가 됩니다.
+* 신뢰구간은 표본에서 구한 모집단 `μ`의 추정값을 어느 정도 신뢰할 수 있는지를 나타낸다고 할 수 있습니다.
+
+### t분포와 95% 신뢰구간
+* 중심극한정리는 표본크기 *n*이 커질수록 근사적으로 성립하기 때문에, 실제 데이터 분석에서 볼 수 있는 작은 표본크기의 경우 표본오차가 정규분포를 따른다고 말할 수 없습니다.
+* 또한 모집단의 `σ`대신 `s`를 써야만 합니다.
+* 이를 위해 작은 표본으로 모집단 전체를 추정하고자 **t분포**가 고안되었습니다.
+* **t분포**는 모집단이 정규분포라는 가정하에 미지의 모집단 표준편차 `σ`를 표본으로 계산한 비편향표준편차 `s`로 대용했을 때, **편차를 표준오차로 나누어 표준화한 값이 따르는 분포**입니다.
