--- a/_posts/2024-09-24-book3_chapter03-04.markdown
+++ b/_posts/2024-09-24-book3_chapter03-04.markdown
@@ -5,6 +5,8 @@ date:   2024-09-22 19:02:31 +0900
 categories: ML Advanced_Session
 ---
 
+# 고객의 전체 모습을 파악하는 테크닉 10
+
 ## 전제조건
 * 30개의 테크닉을 이용해서 스포츠 센터의 데이터를 다룹니다.
 
@@ -30,8 +32,6 @@ categories: ML Advanced_Session
 |4|campaign_master.csv|행사 구분 데이터 (입회비 유무 등)|
 
 ---
-
-# 고객의 전체 모습을 파악하는 테크닉 10
 
 ## 데이터를 읽어 들이고 확인하자
 
@@ -266,3 +266,200 @@ customer_stay.describe()
 * 특히, 평균값과 중앙값은 *1.5*배 정도 차이가 나는 것을 알 수 있습니다.
 * 반면에 매월 최대 이용 횟수의 평균값은 지속 회원이 높기는 하지만, 탈퇴 회원도 *6.4* 정도입니다.
 * `routine_flg`의 평균값은 차이가 크게 나서 지속 회원은 *0.98*로 많은 회원이 정기적으로 이용하고 있습니다. 하지만 탈퇴 회원은 *0.45*로 거의 절반은 랜덤하게 이용하고 있다고 생각할 수 있습니다.
+
+# 고객의 행동을 예측하는 테크닉 10
+
+* 이 장에서는 **앞 장에서 사전 분석한 스포츠 센터 회원의 행동 정보를 이용해서 머신러닝으로 예측**을 진행합니다.
+
+## 전제조건
+* 여기서는 5개의 데이터 중에서 use_log.csv와 customer_join.csv만 사용합니다.
+
+
+|No.|파일 이름|개요|
+|:---:|:---:|:---:|
+|1|use_log.csv|센터의 이용 이력 데이터. 기간은 2018년 4월 ~ 2019년 3월|
+|2|customer_master.csv|2019년 3월 말 시점의 회원 데이터|
+|3|class_master.csv|회원 구분 데이터 (종일, 주간, 야간)|
+|4|campaign_master.csv|행사 구분 데이터 (입회비 유무 등)|
+|5|customer_join.csv|3장에서 작성한 이용 이력을 포함한 고객 데이터|
+---
+
+## 데이터를 읽어 들이고 확인하자
+
+* use_log.csv와 customer_join.csv만을 읽어 들입니다.
+* 또한 만약의 상황을 대비해 결측치도 확인합니다. 
+
+```python
+import pandas as pd
+uselog = pd.read_csv('data/chap04/use_log.csv')
+uselog.isnull().sum() # 결측치 확인 결과: 0
+```
+
+```python
+customer = pd.read_csv('data/chap04/customer_join_new.csv')
+customer.isnull().sum() # 결측치 확인 결과: 0
+```
+
+## 클러스터링으로 회원을 그룹화하자
+
+* customer 데이터를 사용해서 회원 그룹화를 진행합니다.
+* 클러스터링에 이용하는 변수는 고객의 한 달 이용 이력 데이터인 `mean`, `median`, `max`, `min`, `membership_period`로 하겠습니다.
+
+```python
+# 필요한 변수를 추출
+customer_clustering = customer[['mean', 'median', 'max', 'min', 'membership_period']]
+customer_clustering.head()
+```
+
+![클러스터링을 위한 변수 추출](/assets/img/sample/46.png)
+
+* 이번에 사용할 클러스터링 방법
+    * 가장 전통적인 클러스터링
+    * 변수 간의 거리를 기반으로 그룹화를 진행하는 K-means clustering
+    * K = 4로 4개의 그룹을 설정
+    * `mean`, `median`, `max`, `min`은 1~8 사이의 값이지만, `membership_period`는 1~47 사이의 값이기에 **표준화**를 진행합니다.
+
+```python
+from sklearn.cluster import KMeans # kmeans import
+from sklearn.preprocessing import StandardScaler # 표준화 import
+sc = StandardScaler()
+customer_clustering_sc = sc.fit_transform(customer_clustering)
+
+kmeans = KMeans(n_clusters=4, random_state=0)
+clusters = kmeans.fit(customer_clustering_sc)
+customer_clustering['cluster'] = clusters.labels_
+print(customer_clustering['cluster'].unique()) # [2 1 0 3]
+customer_clustering.head()
+```
+
+![클러스터링 결과](/assets/img/sample/47.png)
+
+* 0~3까지 4개의 그룹이 작성됐고, 처음 5행의 결과처럼 각 고객 데이터에 그룹이 할당된 것을 확인할 수 있습니다.
+
+## 클러스터링 결과를 분석하자
+
+```python
+# 칼럼 이름 변경
+customer_clustering.columns = ['월평균값', '월중앙값', '월최댓값', '월최솟값', '회원기간', 'cluster']
+```
+
+```python
+customer_clustering.groupby('cluster').count()
+```
+
+![클러스터링 결과](/assets/img/sample/48.png)
+
+* 그룹 0이 가장 많아 *1336*명의 고객이 존재하고, 다음으로 그룹3, 그룹2, 그룹1의 순서입니다.
+
+```python
+customer_clustering.groupby('cluster').mean()
+```
+
+![클러스터링 결과](/assets/img/sample/49.png)
+
+* 그룹 2는 회원 기간은 짧지만, 이용률이 높은 회원입니다.
+* 그룹 1은 회원 기간이 짧고 가장 이용률이 낮은 회원입니다.
+* 그룹 3과 그룹 0은 그룹 1, 그룹 2보타 회원 기간이 깁니다.
+* 그룹 3과 그룹 0을 비교하면 그룹 3쪽이 회원 기간은 길지만, 이용률이 약간 낮습니다.
+
+## 클러스터링 결과를 가시화하자
+
+* **차원 축소**란 비지도학습의 일종으로, 정보를 되도록 잃지 않게 하면서 새로운 축을 만드는 것입니다.
+* 여기서, 차원 축소의 대표적인 방법으로 **주성분 분석**을 사용합니다.
+* 이를 통해 5개의 변수를 **2차원** 평면상에 가시화합니다.
+
+```python
+from sklearn.decomposition import PCA
+X = customer_clustering_sc
+pca = PCA(n_components=2)
+pca.fit(X)
+x_pca = pca.transform(X)
+pca_df = pd.DataFrame(x_pca)
+pca_df['cluster'] = customer_clustering['cluster']
+```
+
+* 위 코드에서 주성분 분석을 진행합니다.
+
+```python
+import matplotlib.pyplot as plt
+%matplotlib inline
+for i in customer_clustering['cluster'].unique():
+    tmp = pca_df.loc[pca_df['cluster']==i]
+    plt.scatter(tmp[0], tmp[1])
+```
+
+![클러스터링 결과](/assets/img/sample/50.png)
+
+* 주성분 분석을 통해 2차원으로 축소한 데이터가 저장된 `pca_df`를 `matplotlib`을 이용해서 가시화를 진행합니다.
+
+## 클러스터링 결과를 바탕으로 탈퇴 회원의 경향을 파악하자
+
+* 클러스터링으로 분할한 4개의 그룹 속에서, 지속 회원과 탈퇴 회원을 집계합니다.
+* 탈퇴 회원을 특정하기 위해서 `is_deleted` 열을 `customer_clustering`에 추가해서 `cluster` 및 `is_deleted` 별로 집계합니다.
+
+```python
+customer_clustering = pd.concat([customer_clustering, customer], axis=1)
+customer_clustering.groupby(['cluster', 'is_deleted'], as_index=False).count()[['cluster', 'is_deleted', 'customer_id']]
+```
+
+![클러스터링 결과](/assets/img/sample/51.png)
+
+* 그룹 2와 그룹 3은 지속 회원이 많습니다.
+* 그룹 1은 탈퇴 회원만 있습니다.
+* 그룹 0은 골고루 포함되어 있습니다.
+
+* 그룹 2는 회원 기간이 짧지만 초기에 의욕적이어서 전체적으로 이용률이 높습니다.
+* 그룹 3은 회원 기간이 길고 이용률이 그룹 2보다 낮지만 지속 회원이 많은 것을 생각하면 **이용이 안정적이라고 생각할 수 있습니다.**
+
+```python
+customer_clustering.groupby(['cluster', 'routine_flg'], as_index=False).count()[['cluster', 'routine_flg', 'customer_id']]
+```
+
+![클러스터링 결과](/assets/img/sample/52.png)
+
+* `groupby`를 이용해서 `cluster`, `routine_flg` 별로 `customer_id`의 건수를 집계합니다.
+* 지속 회원이 많은 그룹 0, 그룹 3에는 정기적으로 이용하는 회원이 많다는 것을 알 수 있습니다.
+
+## 다음 달의 이용 횟수 예측을 위해 데이터를 준비하자
+
+* **지도학습**은 미리 정답을 알고 있는 숫자 데이터를 이용해서 예측합니다.
+* 고객의 과거 행동 데이터로부터 다음 달의 이용 횟수를 예측하는 경우에는 **지도학습의 회귀 분석**을 이용합니다.
+* 여기에서는 과거 6개월의 이용 데이터를 사용해 다음 달의 이용 횟수를 예측해 봅니다.
+
+* 이번 달: 2018.10
+
+|No.|데이터 종류|기간|개월 수|
+|:---:|:---:|:---:|:---:|
+|1|x_data|2018.05 ~ 2018.10|6개월|
+|2|y_data|2018.11|1개월|
+
+* 먼저 uselog 데이터를 이용해 연월, 회원마다 집계합니다.
+
+```python
+uselog['usedate'] = pd.to_datetime(uselog['usedate'])
+uselog['연월'] = uselog['usedate'].dt.strftime('%Y%m')
+uselog_months = uselog.groupby(['연월', 'customer_id'], as_index=False).count()
+uselog_months.rename(columns={'log_id': 'count'}, inplace=True)
+del uselog_months['usedate']
+uselog_months.head()
+```
+
+![연월 회원 데이터](/assets/img/sample/53.png)
+
+```python
+year_months = list(uselog['연월'].unique())
+predict_data = pd.DataFrame()
+for i in range(6, len(year_months)):
+    tmp = uselog_months.loc[uselog_months['연월'] == year_months[i]]
+    tmp.rename(columns={'count': 'count_pred'}, inplace=True)
+    for j in range(1,7):
+        tmp_before = uselog_months.loc[uselog_months['연월'] == year_months[i-j]]
+        del tmp_before['연월']
+        tmp_before.rename(columns={'count': 'count_{}'.format(j-1)}, inplace=True)
+        tmp = pd.merge(tmp, tmp_before, on='customer_id', how='left')
+    predict_data = pd.concat([predict_data, tmp], ignore_index=True)
+predict_data.head()
+```
+
+![연월 회원 데이터](/assets/img/sample/54.png)
+
