--- a/_posts/2024-10-01-book3_chapter05.markdown
+++ b/_posts/2024-10-01-book3_chapter05.markdown
@@ -137,3 +137,102 @@ predict_data.head()
 
 ## 의사결정 트리를 사용해서 탈퇴 예측 모델을 구축하자
 
+```python
+from sklearn.tree import DecisionTreeClassifier
+import sklearn.model_selection
+
+exit = predict_data.loc[predict_data['is_deleted']==1]
+# exit 데이터의 개수만큼 랜덤샘플링을 진행해서 비율을 1:1로 동일하게 맞춤
+conti = predict_data.loc[predict_data['is_deleted']==0].sample(len(exit))
+
+X = pd.concat([exit, conti], ignore_index=True)
+y = X['is_deleted']
+del X['is_deleted']
+
+X_train, X_test, y_train, y_test = sklearn.model_selection.train_test_split(X, y)
+
+model = DecisionTreeClassifier(random_state=0)
+model.fit(X_train, y_train)
+y_test_pred = model.predict(X_test)
+print(y_test_pred)
+```
+
+* 탈퇴 데이터와 유지 데이터의 개수를 1:1 의 비율에 맞게 정리합니다.
+
+## 예측 모델을 평가하고 모델을 튜닝해 보자
+
+* `result_test` 데이터의 `y_test`와 `y_pred`가 일치하는 개수를 전체 데이터의 개수로 나누어 정답률을 계산합니다.
+* 학습용 데이터로 예측한 정확도와 평가용 데이터로 예측한 정확도의 차이가 작은 것이 이상적입니다.
+
+```python
+correct = len(results_test.loc[results_test['y_test']==results_test['y_pred']])
+data_count = len(results_test)
+score_test = correct / data_count
+print(score_test)
+```
+
+```python
+print(model.score(X_test, y_test))
+print(model.score(X_train, y_train)) # 학습용 데이터에 약간 과적합
+```
+
+* 위와 같이 학습용 데이터에 너무 맞춘 과적합 경향이 있는 경우에는 **데이터 늘리기, 변수 재검토, 모델의 파라미터 변경**과 같은 방법을 적용해 가면서 이상적인 모델로 만들어 갑니다.
+
+```python
+X = pd.concat([exit, conti], ignore_index=True)
+y = X['is_deleted']
+del X['is_deleted']
+X_train, X_test, y_train, y_test = sklearn.model_selection.train_test_split(X, y)
+
+model = DecisionTreeClassifier(random_state=0, max_depth=5)
+model.fit(X_train, y_train)
+print(model.score(X_test, y_test))
+print(model.score(X_train, y_train))
+```
+
+* `max_depth`를 지정하여 의사결정 트리가 깊이 5단계에서 멈추게 합니다. 이를 통해 훈련 데이터의 과적합을 방지합니다.
+
+## 모델에 기여하는 변수를 확인하자
+
+```python
+importance = pd.DataFrame({'feature_names': X.columns, 'coefficient': model.feature_importances_ })
+importance
+```
+
+## 회원 탈퇴를 예측하자
+
+```python
+count_1 = 5
+routine_flg = 1
+period = 7
+campaign_name = '입회비무료'
+class_name = '종일'
+gender = 'M'
+
+if campaign_name == '입회비반값할인':
+    campaign_name_list = [1, 0]
+elif campaign_name == '입회비무료':
+    campaign_name_list = [0, 1]
+elif campaign_name == '일반':
+    campaign_name_list = [0, 0]
+
+if class_name == '종일':
+    class_name_list = [1, 0]
+elif class_name == '주간':
+    class_name_list = [0, 1]
+elif class_name == '야간':
+    class_name_list = [0, 0]
+
+if gender == 'F':
+    gender_list = [1]
+elif gender == 'M':
+    gender_list = [0]
+
+input_data = [count_1, routine_flg, period]
+input_data.extend(campaign_name_list)
+input_data.extend(class_name_list)
+input_data.extend(gender_list)
+
+print(model.predict([input_data]))
+print(model.predict_proba([input_data]))
+```
