--- a/_posts/2024-10-08-book3_chapter07.markdown
+++ b/_posts/2024-10-08-book3_chapter07.markdown
@@ -6,3 +6,13 @@ categories: ML Advanced_Session
 ---
 
 # 물류 네트워크 최적 설계를 위한 테크닉 10
+
+## 전제조건
+- 최종적으로 제품을 판매하는 대리점(P, Q)이 있음
+- 그곳에서 판매되는 상품군(제품 A, B)에는 일정 수요가 예측되어 있음
+- 이 수요량을 근거로 공장(공장 X, Y)에서의 생산량을 결정
+- 각각 제품을 어느 공장의 어느 생산라인에서 제조할 지에 대해서는 각 공장에서 대리점으로까지의 운송비, 제고 비용 등을 고려해서 결정함
+
+## 운송 최적화 문제를 풀어보자
+
+182p 부터
