--- a/_posts/2024-11-05-book4_chapter03.markdown
+++ b/_posts/2024-11-05-book4_chapter03.markdown
@@ -77,3 +77,12 @@ categories: ML Advanced_Session
 ![Z-test와 T-test 혹은 ANOVA](/assets/img/sample/62.png)
 
 * T-test에서 검정 통계량 t값이 임계치보다 크지 않으면 대립가설을 기각하고 귀무가설을 채택한다.
+
+### ANOVA(Analysis of Variance)
+* 세 집단 이상의 평균을 검정할 때 사용
+* 이 역시 결국 **집단의 종류(독립변수)**가 **평균 값의 차이 여부(종속변수)**에 미치는 영향을 검정하는 것이다.
+* 독립변수인 요인의 수에 따라서 **one-way ANOVA**, **two-way ANOVA**, **N-way ANOVA**와 같이 다양하게 불린다.
+* 큰 개념으로 집단 간 평균의 분산을 집단 내 분산으로 나눈 값이 유의도 임계치를 초과하는가에 따라 집단 간 평균 차이를 검정하는 것이다.
+* **임계치를 초과하는 경우, 집단 간 평균에는 통계적으로 유의미한 차이가 있다고 본다.**
+
+49p부터
