--- a/_posts/2024-11-05-book4_chapter03.markdown
+++ b/_posts/2024-11-05-book4_chapter03.markdown
@@ -81,8 +81,25 @@ categories: ML Advanced_Session
 ### ANOVA(Analysis of Variance)
 * 세 집단 이상의 평균을 검정할 때 사용
 * 이 역시 결국 **집단의 종류(독립변수)**가 **평균 값의 차이 여부(종속변수)**에 미치는 영향을 검정하는 것이다.
-* 독립변수인 요인의 수에 따라서 **one-way ANOVA**, **two-way ANOVA**, **N-way ANOVA**와 같이 다양하게 불린다.
+* **독립변수인 요인의 수**에 따라서 **one-way ANOVA**, **two-way ANOVA**, **N-way ANOVA**와 같이 다양하게 불린다.
 * 큰 개념으로 집단 간 평균의 분산을 집단 내 분산으로 나눈 값이 유의도 임계치를 초과하는가에 따라 집단 간 평균 차이를 검정하는 것이다.
 * **임계치를 초과하는 경우, 집단 간 평균에는 통계적으로 유의미한 차이가 있다고 본다.**
 
-49p부터
+### 카이제곱 검정(교차분석)
+* 명목 혹은 서열척도와 같은 **범주형 변수들 간의 연관성**을 분석하기 위해 결합분포를 활용하는 방법이다.
+* 변수들간의 범주를 동시에 교차하는 교차표를 만들어 각각의 빈도와 비율을 통해 변수 상호 간의 독립성과 관련성을 분석하는 것이다.
+* **명목척도로 이루어진 두 개의 변수를 교차표로 표현 - 기대빈도 계산 - 실제 관측빈도와 기대빈도와의 차이를 통해 상호독립성과 관련성을 분석**
+* 기대빈도를 이용하여 검정통계량을 산출하고 이를 유의수준에 따라 결정된 임계치와 비교하여 **유의수준보다 낮으면 상관성이 없다는 귀무가설을 채택**한다.
+
+## 머신러닝 분석 방법론
+### 회귀분석의 기원과 원리
+* 회귀분석은 해당 객체가 소속된 집단의 X(독립변수) 평균값을 통해 Y(종속변수) 값을 예측하는 것이 기본적인 원리다.
+* 즉, 종속변수의 값에 영향을 주는 독립변수들의 조건을 고려하여 구한 평균값이다.
+* 절편, 기울기, 오차항으로 이루어진다.
+* 예측치와 관측치들 간의 수직 거리(오차)의 제곱합을 최소로 하는 직선이 회귀선이 된다.(최소제곱추정법)
+* 회귀분석은 독립변수 간에 상관관계가 없어야 하기 때문에 다중 회귀 분석을 할 때는 다중공선성 검사를 해야 한다.
+
+### 다항 회귀
+* 독립변수와 종속변수의 관계가 비선형 관계일 때 변수에 각 특성의 제곱을 추가하여 회귀선을 비선형으로 변환하는 모델이다.
+* T-Value는 노이즈 대비 시그널의 강도로, 독립변수와 종속변수 간에 선형관계가 얼마나 강한지를 나타내기 때문에 그 값이 커야 한다.
+* 유의도를 나타내는 P-Value는 T-Value와 관측치 수에 의해 결정되는 값이다.
