--- a/_posts/2024-11-05-book4_chapter03.markdown
+++ b/_posts/2024-11-05-book4_chapter03.markdown
@@ -103,3 +103,29 @@ categories: ML Advanced_Session
 * 독립변수와 종속변수의 관계가 비선형 관계일 때 변수에 각 특성의 제곱을 추가하여 회귀선을 비선형으로 변환하는 모델이다.
 * T-Value는 노이즈 대비 시그널의 강도로, 독립변수와 종속변수 간에 선형관계가 얼마나 강한지를 나타내기 때문에 그 값이 커야 한다.
 * 유의도를 나타내는 P-Value는 T-Value와 관측치 수에 의해 결정되는 값이다.
+* 변수별 유의도와 공선성 통계량을 통해 모델에 최종적으로 사용할 변수를 선택할 수 있다.
+    * 전진 선택법: 절편만 있는 모델에서 시작하여 유의미한 독립변수 순으로 변수를 차례로 하나씩 추가하는 방법
+    * 후진 제거법: 모든 독립변수가 포함된 상태에서 시작하여 유의미하지 않은 순으로 설명변수를 하나씩 제거하는 방법
+    * 단계적 선택법: 처음에는 전진선택법과 같이 변수를 하나씩 추가하기 시작하면서, 선택된 변수가 3개 이상이 되면 변수 추가와 제거를 번갈아 가며 수행한다.
+* 모델의 잔차(residual)란 관측값과 모델이 예측한 값의 차이를 말한다.
+* 이 외에도 Elastic Net도 있다.
+
+### Rigid와 Lasso 그리고 Elastic Net
+* **모델에 최종적으로 사용할 유의미한 변수를 선택하는 방법론**
+* Rigid
+    * 전체 변수를 모두 유지하면서 각 변수의 계수 크기를 조정한다.
+    * 종속변수 예측에 영향을 거의 미치지 않는 변수는 0에 가까운 가중치를 주게 하여 독립변수들의 영향력을 조정해 주는 것이다.(계수 정규화)
+    * L2-norm이라고도 하며 매개변수의 값을 조정하여 정규화 수준을 조정한다.
+
+* Lasso
+    * 중요한 몇 개의 변수만 선택하고 나머지 변수들은 계수를 0으로 주어 변수의 영향력을 아예 없앤다는 점에서 Rigid와 차이가 있다.
+    * L1-norm이라고도 하며 Rigid처럼 매개변수 값을 통해 정규화의 강도를 조정한다.
+
+![릿지회귀와 라쏘회귀](/assets/img/sample/63.png)
+
+* Elastic Net
+    * Ridge와 Lasso의 최적화 지점이 다르기 때문에 두 정규화 항을 결합하여 절충한 모델이다.
+
+* 이를 통해 p-value와 R-square 값에 따른 모델 튜닝 전략을 살펴보면 다음과 같다.
+
+![모델 튜닝 전략](/assets/img/sample/64.png)
