--- a/_posts/2024-11-06-book4_chapter10.markdown
+++ b/_posts/2024-11-06-book4_chapter10.markdown
@@ -6,3 +6,56 @@ categories: ML Advanced_Session
 ---
 
 # 인과와 상관
+
+## 인과와 상관
+* 원인과 결과를 원과 화살표로 나타낸 것을 인과 그래프라고 합니다.
+
+## 인과관계와 상관관계
+* 변수 사이의 관계에는 인과관계와 상관관계가 있습니다.
+* 인과관계란 원인과 결과의 관계를 뜻합니다.
+* 상관관계는 데이터에서 보이는 관련성을 말합니다.
+    * 즉, 확률변수 사이가 독립이 아니라는 것을 뜻합니다.
+* 두 변수에 관련된 외부 변수가 존재할 때, 이를 **중첩**이라 하며, 그 변수를 중첩요인이라 합니다.
+
+![인과관계와 상관관계](/assets/img/sample/65.png)
+
+* 무작위 통제 실험에서 얻은 데이터로 인과관계를 간파할 수 있는 것은, '아침밥의 빈도'라는 조건을 무작위로 할당함으로써, 가정환경 등 여타 요인의 영향을 제거할 수 있기 때문입니다.
+* 인과관계는 없지만 상관관계는 있을 때, 이를 허위상관이라 합니다.
+* 상관관계가 있을 때, 인과관계가 있는 경우도 있고 없는 경우도 있습니다.
+* 인과관계를 밝히는 것이 중요한 이유는, **개입**이 가능하기 때문입니다. 즉, 원인 변수를 변화시키는 개입에 의해 결과 변수를 바꿀 수 있습니다.
+
+## 상관관계를 알면 할 수 있는 일
+* 상관관계는 2개 변수 X, Y 사이의 관련성이므로, 한쪽 변수로부터 또 다른 변수를 예측할 수 있습니다.
+
+* 시간을 중첩요인이 되기 쉬움
+* 인과성과 상관성을 분석할 때, **허위상관**을 주의해야 함
+
+## 무작위 통제 실험
+* 인과관계 발견이 어려운 이유 중 하나는 중첩요인의 존재입니다.
+* 음주가 폐암에 미치는 효과를 알고자 한다면, 음주 이외의 요인을 동일하게 하지 않으면 안 됩니다.
+* 변수 X에서 변수 Y로의 인과효과를 추정하는 가장 강력한 방법은 **무작위 통제 실험**입니다.
+* 즉, 알고자 하는 요인인 변수 X에 표본을 무작위로 할당하고 개입 실험을 수행한 다음, 변수 Y와 비교하는 방법입니다.
+* 인과 추론의 근본 문제: 인과효과의 조사는 원리상 불가능하다는 한계에 맞닥뜨리게 되는 것이다.
+
+## 통계적 인과 추론
+* 무작위 통제 실험 없이, 실제 데이터에서 인과효과를 추정하고자 하는 발상이 생겨났습니다.
+* 다중 회귀: 중첩요인을 측정해 모형에 도입하는 것입니다.
+* 층별 해석: 중첩요인을 기준으로 데이터를 몇 가지 그룹으로 나누어, 각 층 안에서 중첩요인의 효과를 가능한 한 작게 하는 방법이 있습니다.
+
+![층별 해석](/assets/img/sample/66.png)
+
+* 경향 점수 짝짓기: 원인변수=0인 집단과 1인 집단에서 비슷한 중첩요인을 가진 데이터를 골라 쌍으로 만드는 방법
+* 이중차분법: 시간 축을 도입, 집단 간 차이에 대해 다시 한번 처리 전후의 차분을 취함으로써 인과효과를 추정할 수 있습니다.
+
+# 베이즈 통계
+## 베이즈 통계의 사고방식
+### 통계학의 2가지 흐름
+* 빈도주의 통계, 베이즈 통계
+
+### 불확실성 다루기
+* 빈도주의 흐름에서의 불확실성은, 모집단에서 표본을 추출할 때의 불확실성입니다.
+
+![불확실성](/assets/img/sample/67.png)
+
+* 빈도주의에서의 확률은 무한히 반복 실행한 결과로서의 객관적인 빈도를 나타냄
+* 베이즈 통계는 *확률을 얼마나 확신하는지*로 해석하는 원리입니다.
