--- a/_posts/2024-11-06-book4_chapter10.markdown
+++ b/_posts/2024-11-06-book4_chapter10.markdown
@@ -59,3 +59,36 @@ categories: ML Advanced_Session
 
 * 빈도주의에서의 확률은 무한히 반복 실행한 결과로서의 객관적인 빈도를 나타냄
 * 베이즈 통계는 *확률을 얼마나 확신하는지*로 해석하는 원리입니다.
+
+### 통계 모형
+* 데이터로 모집단의 실제 분포를 추론하는 것을 **통계적 추론**이라 합니다.
+* 데이터를 이용하여 추정한 통계 모형 *p(x)*가 모집단의 실제 분포 *q(x)*와 어느 정도 들어맞는지를 정량화함으로써, 통계 모형 *p(x)*의 적합도를 평가할 수 있습니다.
+
+* 최대가능도 방법
+
+![최대가능도 방법](/assets/img/sample/68.png)
+
+### 베이즈 통계의 사고방식
+* 통계 모형의 파라미터를 확률변수로 취급하여, 그 확률 분포를 생각합니다.
+* 분석자가 데이터를 알기 전 단계의 확률분포, 즉 사전분포를 미리 마련해 두어야 합니다.
+* 이를 이용해 사후분포를 구하는 것이 베이즈 통계에서의 추정입니다.
+
+![베이즈 정리](/assets/img/sample/69.png)
+
+### 베이즈 추정의 예측분포
+* 베이즈 추정으로 얻은 파라미터의 사후분포로 예측분포를 만들 수 있습니다.
+* 실제 모집단 분포와 예측 분포가 어느 정도 일치하는가를 평가할 때는 확률밀도함수를 비교하는 **쿨백-라이블러 발산**을 이용합니다.
+* AIC와 같은 모형의 좋고 나쁨을 평가하는 지표를 **정보량 기준**이라 합니다.
+
+![베이즈 정리](/assets/img/sample/70.png)
+
+## 베이즈 통계 알고리즘
+* MCMC 방법이라는 계산 알고리즘을 사용합니다.
+* 특정 확률분포를 따르는 난수 발생 알고리즘입니다.
+* 이것을 이용하여 사후분포를 따르는 난수를 발생시키고, 그 난수의 집합을 관찰함으로써 사후분포의 성질을 분석합니다.
+
+    1. 대표적으로 **몬테카를로 방법**이 있습니다.
+    ![베이즈 정리](/assets/img/sample/71.png)
+    2. 또 다른 명칭으로 **마르코프 연쇄**가 있습니다.
+
+* 구체적인 계산은 **깁스 표집**이라는 방법으로 이루어집니다.
