--- a/_posts/2024-11-21-book4_chapter8-9.markdown
+++ b/_posts/2024-11-21-book4_chapter8-9.markdown
@@ -8,3 +8,60 @@ categories: ML Advanced_Session
 ![선형 판별 분석](/assets/img/sample/78.png)
 
 # 통계 모형화
+
+## 선형회귀 원리와 확장
+
+### 선형회귀는 다양한 해석 방법의 기초
+
+* 확장 방향성은 크게 설명변수의 개수를 늘리거나 유형 변경하기, 반응변수의 유형 변경하기, 회귀모형의 형태 변경하기 등 3가지로 나눌 수 있습니다.
+
+### 다중회귀
+
+* 설명변수가 1개인 것을 단순회귀라 하고, 설명변수가 여러 개인 것을 **다중회귀**라 합니다.
+* 설명변수가 k개인 가장 단순한 다중선형회귀모형은 다음과 같이 쓸 수 있습니다.
+* 아래의 그림에서 기울기 b1, b2를 다중 회귀에서는 **편회귀계수**라 부릅니다.
+* 설명변수가 2개일 때 그래프를 그리면 회귀모형은 직선이 아닌 평면이 되는데, 이를 **회귀평면**이라 합니다.
+
+* 아래의 그림은 다중 회귀의 결과를 나타낸 그림입니다.
+* 아래의 표에서 주목해야 할 점은 추정된 **편회귀계수와 그 유의성**입니다.
+* 또한 R^2값과 마지막의 F통계량에서 얻은 p값에도 주목해야 하는데, 편회귀계수가 모두 0인 모형을 귀무가설로 하여, 회귀모형의 설명력의 유의성을 조사합니다.
+
+### 편회귀계수
+* 회귀분석에서 구한 편회귀계수는 설명변수의 데이터 퍼짐 정도나 단위에 따라 크게 달라지기 때문에 편회귀계수끼리 비교할 수는 없습니다.
+* 편회귀계수를 비교하기 위해 **표준화편회귀계수**를 이용합니다.
+* 표준화편회귀계수는 회귀분석을 시행하기 전에 각각의 설명변수를 평균 0, 표준편차 1로 변환한 다음, 회귀분석을 시행하여 구한 회귀계수입니다.
+* 상관계수가 1에 가까운 강한 상관이 있을 때는, 뒤에 설명할 다중공선성이 있는지를 의심하고 이에 대처해야 합니다.
+
+### 범주형 변수를 설명변수로
+* 범주에는 대소 관계가 없으므로, 회귀분석의 설명변수로 이용할 때는 0 또는 1과 같은 **가변수**를 설명변수로 이용하는 등의 요령이 필요합니다.
+
+### 공분산분석
+* 분산분석의 해석 정밀도를 향상시키는 **공분산분석**을 설명합니다.
+* 일반적인 분산분석에 사용하는 데이터와 함께 양적 변수 데이터가 있는 경우에 후보가 되는 방법입니다.
+* 이 새로 추가한 양적 변수를 **공변량**이라 합니다.
+
+* 공분산분석의 사용 조건은 다음과 같습니다.
+1. 집단 간 회귀의 기울기가 서로 다르지 않을 것입니다.
+2. 회귀계수가 0이 아니어야 합니다.
+
+### 고차원 데이터 문제
+* 차원이 늘어날수록 파라미터 추정에 필요한 데이터 양이 폭발적으로 증가한다는 문제가 있습니다.
+* 이를 **차원의 저주**라고 합니다.
+* 차원이 증가할수록 다중공선성 문제가 일어나기 쉬우므로, 모형의 추정 정밀도가 떨어지고 맙니다.
+* 즉, 이에 대한 대책으로 차원축소 방법을 이용하여 차원을 줄일 수 있습니다.
+
+### 다중공선성
+* 설명변수가 여러 개인 다중회귀에서 설명변수 사이에 강한 상관이 있는 경우, **다중공선성**이 있다고 말합니다.
+* 다중공선성 정도를 측정하려면, 먼저 **분산팽창인수 VIF**를 계산합니다.
+* VIF 값은 각 설명변수마다 산출됩니다.
+* VIF>10 이라면, 2개 사이의 상관이 아주 강한 것입니다.
+* 다중공선성이 강하다고 판단했을 때는, 서로 상관이 있는 2개 변수 중 하나를 없애거나, 주성분분석 등의 차원 축소 방법을 이용하여 설명변수의 개수를 줄이는 것이 좋습니다.
+
+## 회귀 모형의 형태 바꾸기
+
+### 상호작용
+* 설명변수 간의 상승효과를 **상호작용**이라 하며, 선형회귀모형안에서 곱셈식으로 도입할 수 있습니다.
+
+### 이원배치 분산분석
+* 하나의 요인만 다루므로 일원배치 분산분석이라 합니다.
+* 분산분석에서도 이와 마찬가지로 여러 개의 요인을 동시에 고려할 수 있는데, 이를 **다원배치 분산분석**이라 합니다.
