--- a/_posts/2024-11-21-book4_chapter8-9.markdown
+++ b/_posts/2024-11-21-book4_chapter8-9.markdown
@@ -65,3 +65,21 @@ categories: ML Advanced_Session
 ### 이원배치 분산분석
 * 하나의 요인만 다루므로 일원배치 분산분석이라 합니다.
 * 분산분석에서도 이와 마찬가지로 여러 개의 요인을 동시에 고려할 수 있는데, 이를 **다원배치 분산분석**이라 합니다.
+* 이 중 2개의 요인이 있는 **이원배치 분산분석**을 설명하겠습니다.
+* 가설검정 결과 상호작용항 c1이 유의미하지 않다면 상호작용이 없다고 보고, 각각의 **주효과**를 그대로 평가합니다.
+
+### 비선형회귀
+* x에 관해 비선형인 모형을 데이터에 적용할 수는 있으나, 주의가 필요합니다.
+* 가령 2차 함수를 적용한 경우에는 그 계수의 해석이 어려워지기 때문에, 무턱대로 복잡한 모형을 채택하는 것은 통상 바람직하지 않습니다.
+* 또한, 2차 함수뿐 아니라 3차 함수나 10차 함수 같은 후보도 얼마든지 있으므로, 어느 모형이 적절한가, 애당초 **적절**이한 말은 어떤 관점에서 본 적절함인가를 생각해야 합니다.
+
+## 일반화선형모형의 개념
+### 선형회귀 원리 확장하기
+* 설명변수가 양적 변수인 다중회귀부터 설명변수가 범주형 변수인 분산분석까지를 포괄하는 것을 **일반선형모형**이라 합니다.
+* 최소제곱법이 아닌 확률분포에 기반한 최대가능도 방법으로 회귀모형을 추정하는 방법을 **일반화선형모형**이라 합니다.
+* 또한 데이터의 성질을 고려하면서 확률 모형을 가정하고, 파라미터를 추정하여 모형을 평가하는 일련의 작업을 가리키며 **통계 모형화**라고 부릅니다.
+* 또한 실제 데이터 해석에서 반응변수가 *예/아니오*와 같이 값이 2개인 변수이거나, 물건이나 생물의 수처럼 음이 아닌 정수인 상황에서는 **선형회귀가 적절하지 않습니다.**
+* 따라서 이러한 경우 일반화 선형모형 원리로써 확률분포를 적절하게 고려해 모형화할 필요가 있습니다.
+
+### 가능도와 최대가능도 방법
+* 위의 식에서 P를 데이터 x에 대한 파라미터의 함수로 보고 **가능도**라고 합니다.
